--- a/package.json
+++ b/package.json
@@ -14,10 +14,7 @@
       "text-encoder-lite": "^2.0.0"
    },
    "scripts": {
-      "start": "run-p start:dev start:api",
-      "start:dev": "cross-env REACT_APP_API_URL=http://localhost:3001 react-scripts start",
-      "prestart:api": "node tools/createMockDb.js",
-      "start:api": "node tools/apiServer.js",
+      "start": "react-scripts start",
       "build": "react-scripts build",
       "test": "react-scripts test",
       "eject": "react-scripts eject"
