--- a/package.json
+++ b/package.json
@@ -1,17 +1,32 @@
 {
-   "name": "ps-flux",
+   "name": "yastva",
    "version": "0.1.0",
    "private": true,
    "dependencies": {
-      "bootstrap": "^4.5.3",
+      "@testing-library/jest-dom": "^4.2.4",
+      "@testing-library/react": "^9.5.0",
+      "@testing-library/user-event": "^7.2.1",
+      "base64-js": "^1.3.1",
       "flux": "^3.1.3",
       "react": "^16.14.0",
       "react-dom": "^16.14.0",
       "react-router-dom": "^5.2.0",
       "react-scripts": "^3.4.3",
       "react-toastify": "^5.5.0",
-      "base64-js": "^1.3.1",
       "text-encoder-lite": "^2.0.0"
+   },
+   "devDependencies": {
+      "cross-env": "^5.2.1",
+      "npm-run-all": "^4.1.5",
+      "eslint-config-airbnb": "^18.2.0",
+      "eslint-config-prettier": "^6.13.0",
+      "eslint-plugin-import": "^2.22.1",
+      "eslint-plugin-jsx-a11y": "^6.3.1",
+      "eslint-plugin-lodash": "^7.1.0",
+      "eslint-plugin-no-use-extend-native": "^0.5.0",
+      "eslint-plugin-promise": "^4.2.1",
+      "eslint-plugin-react": "^7.21.4",
+      "eslint-plugin-sonarjs": "^0.5.0"
    },
    "scripts": {
       "start": "react-scripts start",
@@ -33,10 +48,5 @@
          "last 1 firefox version",
          "last 1 safari version"
       ]
-   },
-   "devDependencies": {
-      "cross-env": "^5.2.1",
-      "json-server": "^0.15.1",
-      "npm-run-all": "^4.1.5"
    }
 }
